--- a/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/test.html
+++ b/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/test.html
@@ -648,11 +648,15 @@
                     console.log("websock open");
                     websocketcreated = true;
                     g_stillConnected = Math.max(200, g_stillConnected);
-                    sendToSocket("MAC");
+                    setTimeout(function() {
+                        sendToSocket("MAC");
+                    }, 100);
                     setTimeout(function() {
                         sendBand();
-                    }, 100);
-
+                    }, 300);
+                    setTimeout(function() {
+                        sendToSocket("SSID");
+                    }, 500);
                 };
 
                 g_websock.onclose = function(evt) {
@@ -2099,7 +2103,7 @@
 
     <center>
         <h1 id="mainHeading" style="font-family:verdana; font-size:30px; color:Black; text-align:center;">Transmitter Test</h1>
-        <p id="version" style="font-family:verdana; font-size:12px; color:Black; text-align:center;">HTML Ver 0.2 - 18 Mar 2019</p>
+        <p id="version" style="font-family:verdana; font-size:12px; color:Black; text-align:center;">HTML Ver 0.3 - 30 Apr 2019</p>
 
         <div>
             <table>
