Correction for 80m power levels
Changes to provide more useful power level settings
Fixes for some issues that sometime prevented the transmitter from transmitting initially from the test.html page.

--- a/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/test.html
+++ b/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/test.html
@@ -230,8 +230,8 @@
         }]; /* Event data to display in a table header */
 
         var g_modulationType = ["CW", "AM"];
-        var g_powerLevels_80m = ["0", "100", "200", "300", "400", "500", "600", "700", "800", "900", "1000", "1100", "1200", "1300", "1400", "1500", "1600", "1700", "1800", "1900", "2000"];
-        var g_powerLevels_2m = ["0", "100", "200", "300", "400", "500", "600", "700", "800", "900", "1000"];
+        var g_powerLevels_80m = ["0", "10", "100", "200", "300", "400", "500", "600", "800", "1000", "1500", "2000", "2500", "3000", "4000", "5000"];
+        var g_powerLevels_2m = ["0", "10", "100", "200", "300", "400", "500", "600", "800", "1000"];
         var g_radioBandType = ["80", "2"];
 
         var g_typeFrequency = [{
