--- a/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/success.html
+++ b/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/success.html
@@ -1,9 +1,12 @@
 <html>
+
 <head>
-  <title>Success</title>
+    <title>Success</title>
 </head>
 
 <body>
-<h1 style="font-family:verdana; font-size:30px; color:Black; text-align:center;">File uploaded successfully!</h1>
+    <p><a href=\ "73.73.73.73">[HOME]</a></p>
+    <h1 style="font-family:verdana; font-size:30px; color:Black; text-align:left;">File uploaded successfully!</h1>
 </body>
+
 </html>
