--- a/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/test.html
+++ b/ESP8266/ARDF_Transmitter/ARDF_Transmitter/data/test.html
@@ -2120,6 +2120,7 @@
     </div>
 
     <center>
+        <p style="text-align:left;"><a href=\ "73.73.73.73">[HOME]</a></p>
         <h1 id="mainHeading" style="font-family:verdana; font-size:30px; color:Black; text-align:center;">Transmitter Test</h1>
         <p id="version" style="font-family:verdana; font-size:12px; color:Black; text-align:center;">HTML Ver 0.3 - 30 Apr 2019</p>
 
